runners/services: Do not match exec values of PWAs

Checking the StartupWMClass is cheap from a performance POV and
avoids false positives that one might have when checking the exec
for the executable name and arguments.

BUG: 460796
(cherry picked from commit ce7c10b31c315867817e860a7c4929892a3b4344)